--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+body{
+    width: 100%;
+}
 /* Empiezo dandole formato al header, incluyendo el titulo */
 header {
     background-color:#dddddd;
@@ -27,13 +30,15 @@ h2 {
     letter-spacing: 3px;
     text-transform: uppercase;
     text-indent: 5px;
-    width: 50%;
     word-spacing: 6px;
 }
 
 main {
     margin-top: 70px;
     margin-bottom: 50px;
+    position: relative;
+    width: 70%;
+    left: 15%;
 }
 
 .negrita {
@@ -45,8 +50,8 @@ main {
 
 section {
     position: relative;
-    left: 25%;
-    margin: 25px;
+    /* left: 5%; */
+    margin-top: 25px;
     font-family: sans-serif;
 }
 
